--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <footer class="footer">
         <p>
           Built by
-          <a href="https://github.com/brrrrdy/Sign-up-Form" target="_blank"
+          <a href="https://github.com/brrrrdy/Library" target="_blank"
             >Tom Alvarez as part of the Odin Project 2025</a
           >
         </p>
