--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>My Library</title>
   </head>
   <body>
     <body>
-      <header class="header"></header>
+      <header class="header">
+        <div class="header-content">
+          <img
+            src="images/liblogo.png"
+            alt="Library Logo"
+            class="header-logo"
+          />
+          <h1>tom's library</h1>
+        </div>
+      </header>
       <main class="container">
         <section class="left-container"></section>
 
