--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   />
                 </div>
               </div>
-              <button type="submit">Submit</button>
+              <button type="submit" disabled>Submit</button>
             </form>
           </div>
         </section>
